feat(docs): added the ability to copy the link of a header via clicking on the hash button a second time

--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "lock:update": "npx --yes yarn-deduplicate"
   },
   "dependencies": {
-    "unified": "^10.1.2"
+    "unified": "^10.1.2",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@crowdin/cli": "^3.10.0",
